<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    
    android:orientation="vertical" >
<!--     android:background="@drawable/spring" -->
    <TextView    
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"   
        android:text="@string/BgImage" 
        /> 
        <RadioGroup 
            android:id="@+id/radioGroup1" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:orientation="vertical" 
            > 
            <RadioButton 
                android:id="@+id/SprintBtn" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/SprintText" 
               /> 
            <RadioButton 
                android:id="@+id/SummerBtn" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/SummerText" 
               /> 
            <RadioButton 
                android:id="@+id/AutumnBtn" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/AutumnText" 
               /> 
             <RadioButton 
                android:id="@+id/WinterBtn" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/WinterText" 
               /> 
        </RadioGroup> 
       
</LinearLayout>